--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ email:              your-email@example.com
 description:        A Blog Theme by Start Bootstrap
 author:             Start Bootstrap
 baseurl:            ""
-url:                "https://github.com/cheeou/cheeou.github.io.git"
+url:                "https://cheeou.github.io"
 
 # Social Profiles
 twitter_username:   SBootstrap
