--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title:              Clean Blog
 email:              your-email@example.com
 description:        A Blog Theme by Start Bootstrap
 author:             Start Bootstrap
-baseurl:            "/startbootstrap-clean-blog-jekyll"
+baseurl:            "/cheeou"
 url:                "https://cheeou.github.io"
 
 # Social Profiles
